--- a/CapsulaDoTempo.csproj
+++ b/CapsulaDoTempo.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Hangfire" Version="1.8.20" />
         <PackageReference Include="Mailjet.Api" Version="3.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6" />
